# sostrades-ontology

./: .gitignore  CREDITS.rst  HeadersIgnoreConfig.py  MANIFEST.in  NOTICE  README.md  headers_ignore_config.json  ontology.requirements.txt  pyproject.toml  pytest.ini  requirements.in  requirements.txt  ruff.toml  setup.py
LICENSES/: ZPL 2.1.txt
LICENSES/headers/: Apachev2.0.txt
sos_ontology/core/: ontology.py  sos_decentralized_codedataextractor.py  sos_ontology.py  sos_terminology.py  sos_toolbox.py
sos_ontology/core/functions/: ontology_to_terminology.py  sendGChatNotifications.py
sos_ontology/core/script/: createSoSOntologyFromCode.py
sos_ontology/core/sos_entities/: code_repository.py  parameter.py  parameter_usage.py  sos_coupling.py  sos_discipline.py  sos_entity.py  sos_process.py  sos_process_repository.py  sos_usecase.py
sos_ontology/data/logs/: ontologyCreationLogs.json
sos_ontology/data/sos_ontology/: SoSTrades_Ontology_ABox_Decentralized.owl  SoSTrades_Ontology_TBox.owl
sos_ontology/data/terminology/: SoS_Trades_Terminology_ABox.xlsx
sos_ontology/rest_api/: api.py  utils.py
sos_ontology/rest_api/models/: model_status.py
sos_ontology/tests/: api_test.py  l0_test_example.py  l0_test_header.py  l1_test_example.py  l1s_test_header.py  sos_ontology_tests.py
sos_ontology/tests/data/: data_request.json  linked_process_dict.json  parameter_usages.json  processes_name.json  repositories_name.json
