[project]
name = "sostrades-ontology"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license-files = ["LICENSE"]
authors = [
    { name = "Airbus, Capgemini", email = "" }
]
requires-python = ">=3.12"
dependencies = [
    "flask==2.3.3",
    "jsonpickle==3.2.2",
    "numpy==1.26.4",
    "openpyxl==3.1.5",
    "pandas==2.2.2",
    "pytest==8.1.2",
    "pytest-cov==6.2.0",
    "pytest-durations==1.5.2",
    "pytest-xdist==3.7.0",
    "rdflib==5.0.0",
    "requests==2.32.4",
    "ruff==0.11.13",
    "sostrades-core>=0.1.1",
    "table-logger",
    "textdistance==4.6.2",
    "werkzeug==3.1.5",
]

[build-system]
requires = ["uv-build>=0.8.0,<0.9"]
build-backend = "uv_build"

[project.urls]
Homepage = "https://github.com/os-climate/sostrades-ontology"

[tool.uv]
extra-index-url = ["https://test.pypi.org/simple/"]
index-strategy = "unsafe-best-match"

[tool.uv.build-backend]
module-name = "sos_ontology"
module-root = ""

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.uv.sources]
table-logger = { git = "https://github.com/AleksTk/table-logger.git", rev = "v0.3.7" }

